--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
 header {
     margin-top: 1px;
     background-color: white;
+    height: 60px;
 }
 
 .logo {
@@ -26,10 +27,15 @@ header {
     padding-left: 15px;
 }
 
-.logo_text {
+h1 {
+    display: inline-block;
     font-size: 3.5rem;
-    font-weight: 900;
-    margin-bottom: 10px;
+}
+
+.logo_text {
+    
+    /* font-weight: 900; */
+    /* margin-bottom: 10px; */
 }
 
 /* Main */
